# ECX_Maths

./: .gitignore  CMakeLists.txt
include/: ECX_Functions.h  ECX_Mat2f.h  ECX_Mat3f.h  ECX_Mat4f.h  ECX_Maths.h  ECX_Quaternionf.h  ECX_Vec2f.h  ECX_Vec3f.h  ECX_Vec4f.h
